home page banners: constrain image heights to 540px center images vertically spacing/padding fixes

--- a/excellalabs/static/css/_heros.scss
+++ b/excellalabs/static/css/_heros.scss
@@ -97,6 +97,7 @@
     height: 4px;
     border-radius: 30px;
     margin-bottom: 30px;
+    margin-top: 12px;
     display: block;
 }
 
@@ -196,8 +197,10 @@
     }
 }
 
-@media (min-width: 800px) {
-
+@media (min-width: 768px) {
+    .hero_subject {
+        margin-bottom: -15px;
+    }
 }
 
 @media (min-width: 992px) {
